# VeloxEditiingg

./: .dockerignore  .finalize-requested-split-trigger  .gitignore  .gitmodules  .golangci.yml  .split-next-long-files-trigger  CHANGELOG.md  CONTRIBUTING.md  MESSAGE.txt  MILESTONE_PR_YOUTUBE_SOCIAL_SEPARATION.md  Makefile  README.md  artifact_validation.json  bash-n  end_scenario  go.work  go.work.sum  resolve_conflicts.py  run_tests.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: check-canonical-names.yml  ci-opaque-wire.yml  ci.yml  dependency-scan.yml  deploy.yml  e2e-workload-mtls.yml  e2e-workload.yml  golden-e2e.yml  issue-trigger-split-long-files.yml  master-image.yml  migrate-script-generate.yml  no-youtube-regression.yml  one-shot-split-long-files.yml  pre-existing-test-watchlist.yml  refactor-split-large-files.yml  regression-race.yml  routing-invariants.yml  split-next-long-files.yml  test.yml  worker-image.yml
.pilot/: launcher.sh  routing-invariants-c2-msg.txt  routing-invariants-c3-msg.txt  test-watchlist-gate-msg.txt  typed-metrics-c1-buildfix-msg.txt  typed-metrics-c2-stubfix-msg.txt  typed-metrics-must-pass-msg.txt  worker-agent-erralias-msg.txt  workspace-tests-gate-msg.txt
.velox/: production.env.example
DataServer/: .env.example  Dockerfile  go.mod  go.sum
DataServer/ci/: guard_legacy_mutation.sh
DataServer/docs/: youtube_sqlite_migration_plan.md
Instaedit/: .gitignore  README.md
Instaedit/socialsync/: index.html  package-lock.json  package.json  vite.config.ts
RemoteCodex/: BUILD_INFO.json
RemoteCodex/native/video-engine-cpp/: CMakeLists.txt  README.md
RemoteCodex/native/video-engine-cpp/include/: file_utils.hpp  json_utils.hpp  media_utils.hpp  video_contract.hpp
RemoteCodex/native/video-engine-cpp/include/velox/core/: metrics.hpp  render_engine.hpp
RemoteCodex/native/video-engine-cpp/include/velox/plan/: render_plan.hpp  render_plan_parser.hpp
RemoteCodex/native/video-engine-cpp/include/velox/services/: file_utils.hpp  media_utils.hpp
RemoteCodex/native/video-engine-cpp/schemas/: render_plan_v1.json  smoke_video_to_video.json
RemoteCodex/native/video-engine-cpp/src/: cmd_full_video.cpp  main.cpp  video_builder.cpp
RemoteCodex/native/video-engine-cpp/src/app/: commands.cpp
RemoteCodex/native/video-engine-cpp/src/core/: render_engine.cpp
RemoteCodex/native/video-engine-cpp/src/plan/: render_plan_parser.cpp
RemoteCodex/native/video-engine-cpp/src/services/: ffmpeg_progress_parser.cpp  file_utils.cpp  media_utils.cpp
RemoteCodex/scripts/: build-video-engine.sh  cleanup-worker.sh  worker-entrypoint.sh
VeloxLEgit/: .gitignore  Makefile  README.md  go.work  go.work.sum  run_tests.sh
VeloxLEgit/.github/: CODEOWNERS
VeloxLEgit/.pilot/: launcher.sh
VeloxLEgit/DataServer/: run-tests-postgres.sh
VeloxLEgit/alerts/: README.md  spec-14-compute-outcomes.yml  spec-15-placement-rejections.yml  spec-4-reconcile-deadline.yml
VeloxLEgit/dashboards/: compute-outcomes.json  conflict-budget.json  engine-metrics.json
VeloxLEgit/deploy/: requirements.yml  validate-master-env.sh  velox-server.env.example
VeloxLEgit/docs/: SECURITY_RUNBOOK.md  gitignore-policy.md  metrics-catalog.md  refactor-youtube-map.md  worker-reliability-fixes.md  worker_deployment.md
VeloxLEgit/prometheus/: README.md
VeloxLEgit/scripts/: bump-version-and-deploy.sh  check-share-cert.sh  gen-proto.sh  gen-worker-certs.sh  pilot.sh
alerts/: README.md
dashboards/: README.md  failure-reasons.json  placement-rejections.json
deploy/: README.md  install-server.sh  requirements.yml  validate-master-env.sh  velox-remote-tunnel.env.example  velox-remote-tunnel.service  velox-server.env.example  velox-server.service
deploy/certs/: monitor-expiry.sh
deploy/group_vars/: all.yml  vault.yml.example
deploy/inventory/: production.ini.example
docs/: 2026-07-19-orchestrator-wrap-audit.md  2026-07-19-post-0d2158d-regression-check.md  CHANGELOG.md  SECURITY_RUNBOOK.md  SOCIAL_API_MIGRATION_RUNBOOK.md  api_script_generate_with_images.md  completion-protocol-rollout-and-acceptance.md  completion-protocol-worker-and-reconciliation.md  completion-protocol.md  gitignore-policy.md  metrics-catalog.md  pipeline.md  worker-reliability-fixes.md  worker_deployment.md
docs/api/: ansible.md  (+2 more)
frontend_standalone/: README.md
imageendopint/: .env.example  .gitignore  DOCUMENTATION.md  README.md  pyproject.toml
imageendopint/app/: config.py  main.py  models.py  store.py  worker.py
imageendopint/app/browser/: __init__.py  actions.py  extraction.py  generation.py  utils.py
imageendopint/scripts/: chrome-session.sh  debug-nano-banana-final.py  debug-nano-banana.py  export-storage-state.sh  start-all.sh  test_webhook_listener.py
inventory/: production.ini.example
ops/: rw-prod-001-evidence.json  rw-prod-003-bootstrap-report.json  rw-prod-004-ready-snapshot.json  rw-prod-004-ready-transitions.json
prometheus/: README.md  engine-analysis.sql
refactored/: .dockerignore  .gitignore  .golangci.yml  CHANGELOG.md  README.md  build_and_bundle.sh  workers.json
refactored/RemoteCodex/native/video-engine-cpp/: CMakeLists.txt  README.md
refactored/RemoteCodex/native/video-engine-cpp/include/: file_utils.hpp  json_utils.hpp  media_utils.hpp  video_contract.hpp
refactored/RemoteCodex/native/video-engine-cpp/src/: cmd_full_video.cpp  main.cpp  video_builder.hpp
scripts/: bump-version-and-deploy.sh  check-share-cert.sh  deploy-dark-editor.sh  dev-shell-bootstrap  gen-production-pki.sh  generate-build-info.sh  pilot.sh  smoke_job_final.sh
shared/: README.md
(+2425 files in other folders)
